# fastapi_tortoise_mysql

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.en.md  README.md  docker-compose.yml  docker_conf.py  gunicorn.conf.py  nginx.conf  pyproject.toml  requirements.txt  supervisor.conf
backend/: migration.py  pyproject.toml
backend/app/: init_test_data.py  main.py  migration.py  pyproject.toml
backend/app/admin/api/v1/: user.py
backend/app/admin/api/v1/auth/: auth.py  captcha.py
backend/app/admin/crud/: base.py  crud_user.py
backend/app/admin/model/: __init__.py  user.py
backend/app/admin/models/: __init__.py  user.py
backend/app/admin/schema/: token.py  user.py
backend/app/admin/schemas/: token.py  user.py
backend/app/admin/service/: auth_service.py  user_service.py
backend/app/admin/services/: user_service.py
backend/app/aerich/: env.py  pyproject.toml
backend/app/aerich/migrations/models/: 0_20220211184150_init.sql  0_20220422194930_init.sql  0_20220614193618_init.sql  0_20221026173729_init.sql  1_20221016021134_update.sql
backend/app/api/: __init__.py  jwt.py  jwt_security.py  registrar.py  router.py  routers.py
backend/app/api/service/: user_service.py
backend/app/api/v1/: __init__.py  captcha.py  test_redis.py  user.py  v1_captcha.py  v1_test_redis.py  v1_user.py
backend/app/api/v1/auth/: auth.py  captcha.py  user.py
backend/app/common/: jwt.py  log.py  pagination.py  redis.py
backend/app/common/exception/: errors.py  exception_handler.py
backend/app/common/excpetion/: exception_classes.py  exception_handler.py
backend/app/common/response/: response_code.py  response_schema.py
backend/app/common/security/: jwt_security.py
backend/app/core/: conf.py  path_conf.py  registrar.py
backend/app/crud/: base.py  crud_user.py  user_crud.py
backend/app/database/: __init__.py  db.py  db_mysql.py  mysql_db.py  orm_init.py
backend/app/middleware/: __init__.py  access_middle.py
backend/app/models/: __init__.py  base.py  project.py  user.py
backend/app/schemas/: __init__.py  base.py  sm_token.py  sm_user.py  token.py  user.py
backend/app/services/: user_service.py
backend/app/utils/: format_string.py  generate_string.py  re_verify.py  send_email.py
backend/common/: crud.py  enums.py  jwt.py  model.py  pagination.py  redis.py
backend/common/exception/: exception_handler.py
backend/common/security/: jwt.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: db.py  db_mysql.py
backend/utils/: format_string.py  send_email.py  serializers.py
deploy/: fastapi_server.conf  gunicorn.conf.py  nginx.conf  supervisor.conf
deploy/docker-compose/: .env.server  docker-compose.yml
