[project]
name = "fastapi_tortoise_mysql"
version = "0.0.1"
description = "fastapi 基础脚手架, fastapi + pydantic-v2 + tortoise-orm + aerich + mysql + redis"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
dependencies = [
    "aerich==0.7.2",
    "aiofiles==23.2.1",
    "aiosmtplib==3.0.1",
    "asgiref==3.8.1",
    "bcrypt==4.1.3",
    "cryptography==42.0.7",
    "email_validator==2.1.1",
    "fast-captcha==0.2.1",
    "fastapi==0.111.0",
    "fastapi-limiter==0.1.6",
    "fastapi-pagination==0.12.24",
    "gunicorn==22.0.0",
    "loguru==0.7.2",
    "passlib==1.7.4",
    "path==16.14.0",
    "pre-commit==3.7.1",
    "pydantic-settings==2.2.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "redis[hiredis]==5.0.4",
    "tortoise-orm[asyncmy]==0.21.0",
    "uvicorn[standard]==0.29.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.4.2",
]
deploy = [
    "supervisor>=4.2.5",
    "wait-for-it>=2.2.2",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
