[project]
name = "fastapi_tortoise_mysql"
version = "0.0.1"
description = "fastapi tortoise-orm with mysql"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
dependencies = [
    "aerich==0.7.2",
    "asgiref==3.8.1",
    "bcrypt==4.1.3",
    "cryptography==42.0.7",
    "email_validator==2.1.1",
    "fast-captcha==0.2.1",
    "fastapi[all]==0.111.0",
    "fastapi-limiter==0.1.6",
    "fastapi-pagination==0.12.24",
    "loguru==0.7.2",
    "pwdlib==0.2.1",
    "path==16.14.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.9",
    "redis[hiredis]==5.0.4",
    "tortoise-orm[asyncmy]==0.24.0",
    "tzdata==2025.1",
    "msgspec>=0.18.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
lint = [
    "pre-commit>=4.0.0",
]
server = [
    "gunicorn>=21.2.0",
    "wait-for-it>=2.2.2",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
